--- a/src/content/background.tex
+++ b/src/content/background.tex
@@ -2,7 +2,7 @@
 \chapter{Background}\label{ch:background}
 %----------------------------------------------------------------------------
 
-In this chapter I address the foundations of this work. In \autoref{sec:formalisms} I introduce the theoretical bases of behaviour modeling, which is used widely in systems engineering, and their implementation in an existing language - SysML. After this I talk about Formal Verification in \autoref{sec:formal_verification}, which is a mathematically rigorous method for finding specific configurations of modelled systems. Lastly, I introduce the Gamma Composite Statechart Framework, which is a tool for stating and verifying composite models using statechart behaviours.
+In this chapter I address the foundations of this work. In \autoref{sec:mbse} I introduce concept of model-based systems engineering, which is a well known approach for complex system design. This includes SysML as well (\autoref{ssec:sysml}).  After this I talk about Formal Verification in \autoref{sec:formal_verification}, and introduce Petri nets (\autoref{ssec:petri-net} and a mapping from between activities and Petri nets (\autoref{ssec:activities-as-petri-nets}). Lastly, I introduce the Gamma Composite Statechart Framework, which is a tool for stating and verifying composite models using statechart behaviours\autoref{sec:gamma}, and a low-level formalism created for model checking used by Gamma in \autoref{sec:xsts}.
 
 \input{content/background/engineering-models}
 \input{content/background/formal-verification}
