--- a/src/content/background/gamma.tex
+++ b/src/content/background/gamma.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\section{The Gamma Statechart Composition Framework}
+\section{The Gamma Statechart Composition Framework}\label{sec:gamma}
 %----------------------------------------------------------------------------
 
 The Gamma Statechart Composition Framework is a tool created to support platform-independent modeling and heterogeneous development of [system] components. For my purposes, it provides an interface to \emph{design} composite systems and transform them to a verifiable model (XSTS).
