--- a/src/content/activity-language/design-decisions.tex
+++ b/src/content/activity-language/design-decisions.tex
@@ -2,4 +2,23 @@
 \section{Language Design}
 %----------------------------------------------------------------------------
 
-sysml és sysml2-höz képesti különbségek, a subset amit bevállalunk, és miért csak ezeket (do behaviour pontosítása, felesleges elemek kihagyása, stb)
+During the design phase of the language SysML served as the basis when deciding what is should and should not contain. When deciding the scope of the language the following statement served as target: The language should be easy to transform into XSTS, while also following SysML activity semantics.
+
+To conform to the previous statements, the language should resemble SysML, however, should be as \emph{lightweight} as possible. For this reason, we determined a sub-set of the SysML activity feature set that the language will contain.
+
+\subsection{SysML Feature Sub-set}
+
+ez a rész csak jegyzet
+
+Initial/final node, action node, composite activity node, decision/merge node, fork/join node, pins, control/data flows.
+
+Do behaviour: 
+
+call activity action on transitions is not supported, would have to be inlined and flattened, atomic functions, interlaced with line execution semantics (future work)
+
+ - call activity context függő - hosszú (nem atomikus) dolgot nem lehet akárhol meghívni (transition, sima action, stb)
+- validáció: inline környezetben tilos várakozás és ciklus (vagy csak x mélységig)
+- sok köztes nem stabil állapot
+- nagy változás a trafóban
+
+ezért csak do activity van
