--- a/src/content/background/formal-verification.tex
+++ b/src/content/background/formal-verification.tex
@@ -17,7 +17,7 @@ Model Checker algorithms (see \autoref{fig:model_checking}), such as UPPAAL\foot
 	\label{fig:model_checking}
 \end{figure}
 
-\subsection{Petri Net}
+\subsection{Petri Net}\label{ssec:petri-net}
 
 \begin{figure}[!ht]
 	\centering
@@ -44,28 +44,35 @@ The state of a Petri net is defined by the current marking \( M : P \rightarrow 
 
 In words: W describes the \emph{weight} of each flow from a transition to a place, or from a place to a transition. Firing a transition \(t\) in a marking \(M\) consumes \(W^-(p_i, t)\) tokens from each of its input places \(p_i\), and produces \(W(t, p_o)\) tokens in each of its output places \(p_o\). One such transition \(t\) is \emph{enabled} (it may \emph{fire}) in \(M\) if there are enough tokens in its input places for the consumptions to be possible, i.e., if and only if \( \forall p : M(p) \ge W(s, t)\).
 
-\subsection{Activities as Petri Nets}
+\subsection{Activities as Petri Nets}\label{ssec:activities-as-petri-nets}
 
-As I have mentioned in the beginning of this Section, formal verification requires models to be specified using \emph{mathematical} precision. In the paper called "Verifying SysML activity diagrams using formal transformation to Petri nets"\cite{https://doi.org/10.1002/sys.21524} by Edward Huang, Leon F. McGinnis and Steven W. Mitchell they propose a way to \emph{partially} map SysML activity diagrams to Petri nets. In the following, I will summarise their work.
+Formal verification requires models to be specified using \emph{mathematical} precision. In the paper called "Verifying SysML activity diagrams using formal transformation to Petri nets"\cite{https://doi.org/10.1002/sys.21524} by Edward Huang, Leon F. McGinnis and Steven W. Mitchell they propose a way to \emph{partially} map SysML activity diagrams to Petri nets. In the following, I will summarise their work.
 
-\subsubsection*{Constrained Sub-set of SysML}
+\subsubsection{Constrained Sub-set of SysML}\label{ssec:sysml_assumptions}
 
-Since SysML Activity Diagrams do not have exact execution semantics\cite{euml}, the PN mapping can only be done for a limited subset of the modeling elements: actions, initial nodes, final nodes, join nodes, fork nodes, merge nodes, decision nodes, pins and object/control flows, which have precise execution semantics as defined in the Foundational Subset for Executable UML Models.\cite{fuml}
+Since SysML Activity Diagrams do not have exact execution semantics\cite{euml}, the PN mapping can only be done for a limited subset of the modeling elements: \emph{actions}, \emph{initial nodes}, \emph{final nodes}, \emph{join nodes}, \emph{fork nodes}, \emph{merge nodes}, \emph{decision nodes}, \emph{pins} and \emph{object/control flows}, which have precise execution semantics as defined in the Foundational Subset for Executable UML Models.\cite{fuml}
 
-The other constraints are:
+The paper also assumes some other constrains:
 
 \begin{enumerate}
 	\item The value of tokens is not considered.
 	\item Control flows with multiple tokens at a time are not considered.
-	\item Optional object/control flows are not considered, i.e., multiplicity lower bounds are strictly positive.
 \end{enumerate}
 
-As a result of these constraints, the exact semantics of activities cannot be described using only Petri nets. This fact will be addressed in \autoref{ch:activiy_verification}.
+These constraints allow the mapping between activities and Petri nets, however, the constructed PN will not be semantically equivalent. This fact will be addressed in \autoref{ch:activiy_verification}.
 
-\subsubsection*{Mapping Rules}
+\subsubsection{Mapping Rules}
 
-The paper groups the given elements into two sets: "load-and-send" (LAS) and "immediate-repeat" (IR)
+Activity elements can be grouped into two sets: \emph{load-and-send} (LAS) and \emph{immediate-repeat} (IR)
 
-LAS nodes are fired when all their inputs have tokens equal to or more than the weight function (in PN) or the multiplicity lower bounds (in activity diagrams). When an LAS node fires,the number of tokens (equal to the weight function or the multiplicity lower bound) associated with an input arcs/pin is consumed and the number of tokens (equal to the weight function or the multiplicity lower bound) associated with an output arc/pin is added. Examples of LAS nodes in PN are transitions.
+LAS nodes are fired when all their inputs have tokens. When an LAS node fires, the number of tokens associated with the input arcs/pin is consumed and the number of tokens associated with an output arc/pin is added. Examples of LAS nodes in Petri nets are transitions. In SysML activity diagrams, the execution semantics of fork nodes, join nodes, and basic actions are also LAS because these nodes are fired when all their input nodes have at least one token.
 
-In contrast, as soon as an IR node receives a token from any input, it immediately adds a token to its output nodes. Places in PN are an example of IR nodes.
+In contrast, as soon as an IR node receives a token from any input, it immediately adds a token to its output nodes. Places in PN are an example of IR nodes. For UML/SysML activity diagrams, activity final nodes, merge nodes, decision nodes and pins are IR nodes because they are fired immediately when any token is received.
+
+Given the set of assumptions in \autoref{ssec:sysml_assumptions}, control flows and object flows in an activity diagram can be mapped to arcs in a Petri net.
+
+\subsubsection{Example Mapping}
+
+Figure ... shows an example mapping from a SysML activity diagram to a Petri net
+
+For more information, please refer to the Paper!
